:sparkles: Implementación de entidades de reserva de vuelos y vuelos